Fixed row spacing issue on Chrome mobile.

--- a/site/css/250.css
+++ b/site/css/250.css
@@ -189,6 +189,7 @@ td:nth-child(2) {
     padding-right: .5vw;
 }
 td:nth-child(3) {
+    min-width: 4em; /* Fix row spacing issue on Chrome mobile. */
     padding-right: .5vw;
 
     text-align: center;
